--- a/index.html
+++ b/index.html
@@ -964,19 +964,11 @@
                     </h2>
                     <div class="vida-main-subtitle text-xs sm:text-base md:text-lg lg:text-xl mt-2 sm:mt-5 fade-in-element" style="animation-delay: 0.6s;">
                         <p class="subtitle-line-1 mb-1 sm:mb-3 text-center lg:text-left text-xs sm:text-base">
-<<<<<<< HEAD
                             <span class="font-semibold">Tu aliado informativo</span> en momentos críticos
                         </p>
                         <p class="subtitle-line-2 text-center lg:text-left leading-relaxed text-xs sm:text-base">
                             Estoy aquí para ayudarte a tomar decisiones 
                             <span class="font-semibold">claras, humanas y fundamentadas</span>
-=======
-                            <span class="font-semibold">Tu guía de confianza</span> en momentos delicados
-                        </p>
-                        <p class="subtitle-line-2 text-center lg:text-left leading-relaxed text-xs sm:text-base">
-                            Estoy aquí para ayudarte a tomar decisiones 
-                            <span class="font-semibold">claras, humanas y bien informadas</span>
->>>>>>> 1c36224 (Subir proyecto VIDA completo)
                         </p>
                     </div>
                 </div>
@@ -1020,19 +1012,11 @@
             <div class="container mx-auto max-w-xl lg:max-w-2xl px-4 sm:px-12 lg:px-16">
                 <div class="flex flex-col items-center justify-center py-1 sm:py-2">
                     <p class="text-[10px] sm:text-base md:text-xs text-slate-700 font-medium mb-0 leading-tight max-w-xs sm:max-w-md lg:max-w-lg text-center">
-<<<<<<< HEAD
                         VIDA es una herramienta informativa. No sustituye la atención médica.<br class="hidden sm:block">
                         <span class="block sm:inline">© 2025 José Agustín Gutiérrez Iglesias | Iniciativa VIDA. Todos los derechos reservados.</span>
                     </p>
                     <a href="https://www.gob.mx/cenatra" target="_blank" class="text-[10px] sm:text-xs text-[var(--vida-btn-feedback)] underline font-semibold hover:text-[var(--vida-text-dark)] transition-colors block mt-0 text-center">
                         Ir a CENATRA
-=======
-                        VIDA es una herramienta informativa. No sustituye la atención médica ni legal.<br class="hidden sm:block">
-                        <span class="block sm:inline">© 2025 José Agustín Gutiérrez Iglesias | Proyecto VIDA. Todos los derechos reservados.</span>
-                    </p>
-                    <a href="https://www.ont.es/" target="_blank" class="text-[10px] sm:text-xs text-[var(--vida-btn-feedback)] underline font-semibold hover:text-[var(--vida-text-dark)] transition-colors block mt-0 text-center">
-                        Ir a Organización Nacional de Trasplantes
->>>>>>> 1c36224 (Subir proyecto VIDA completo)
                     </a>
                 </div>
             </div>
@@ -1052,7 +1036,6 @@
             </button>
             <h3 class="text-base sm:text-2xl font-bold text-[var(--vida-text-dark)] mb-2 sm:mb-4 pr-8">¿Qué hace VIDA?</h3>
             <div class="text-slate-700 text-justify space-y-2 sm:space-y-3 text-xs sm:text-base" style="text-align: justify;">
-<<<<<<< HEAD
                 <p>VIDA es un asistente conversacional creado para brindar orientación empática, clara y confiable sobre la donación de órganos, tejidos y sangre en México.</p>
                 <p>Fue desarrollado como una herramienta informativa para acompañar a personas que tienen dudas, miedo o simplemente desean entender mejor cómo funciona la donación, ya sea como donadores voluntarios o como familiares que enfrentan una decisión en un momento difícil.</p>
                 <p>VIDA no sustituye atención médica ni asesoría profesional directa, pero está diseñada para ayudarte a:</p>
@@ -1062,20 +1045,8 @@
                     <li>Desmitificar ideas falsas sobre la donación.</li>
                     <li>Reflexionar con libertad sobre el acto de donar.</li>
                     <li>Obtener enlaces seguros y oficiales para registrarte como donador voluntario o encontrar centros de donación.</li>
-=======
-                <p>VIDA es un asistente conversacional creado para ofrecer orientación empática, clara y confiable sobre la donación de órganos, tejidos y sangre en España.</p>
-                <p>Está diseñado como una herramienta informativa para acompañar a personas que tienen dudas, inquietudes o simplemente desean comprender mejor cómo funciona la donación en nuestro país, ya sea desde la reflexión personal o ante la pérdida de un ser querido.</p>
-                <p>VIDA no reemplaza la atención médica ni la labor de los equipos de coordinación de trasplantes, pero sí puede ayudarte a:</p>
-                <ul class="list-disc pl-3 sm:pl-6 space-y-1 text-xs sm:text-base">
-                    <li>Comprender qué órganos, tejidos y componentes sanguíneos se pueden donar.</li>
-                    <li>Saber cuándo y cómo se lleva a cabo una donación en vida o tras el fallecimiento.</li>
-                    <li>Conocer en qué consiste el consentimiento presunto y cómo se respeta la voluntad individual.</li>
-                    <li>Desmentir ideas equivocadas que aún circulan sobre la donación.</li>
-                    <li>Reflexionar libremente sobre el valor de donar y cómo compartir tu decisión con la familia.</li>
-                    <li>Acceder a recursos oficiales como la ONT o los registros autonómicos de voluntades anticipadas.</li>
->>>>>>> 1c36224 (Subir proyecto VIDA completo)
                 </ul>
-                <p>VIDA es una voz que informa sin juzgar, acompaña con respeto y cree que donar es uno de los mayores actos de generosidad y humanidad.</p>
+                <p>VIDA es una voz que informa sin juzgar, acompaña sin presionar, y cree que donar es un acto de amor y conciencia.</p>
             </div>
         </div>
     </div>
@@ -1087,17 +1058,10 @@
             </button>
             <h3 class="text-base sm:text-2xl font-bold text-[var(--vida-text-dark)] mb-2 sm:mb-4 pr-8">Aviso de Privacidad – VIDA</h3>
             <div class="text-slate-700 text-justify text-xs sm:text-base" style="text-align: justify;">
-<<<<<<< HEAD
                 <p class="mb-2 sm:mb-3">VIDA (Voz de Información y Donación Asistida) es una herramienta informativa que opera sin recopilar datos personales sensibles. No se almacenan nombres, ubicaciones, correos electrónicos ni respuestas específicas de los usuarios. Las conversaciones no son monitoreadas ni utilizadas para fines comerciales o de perfilamiento.</p>
                 <p class="mb-2 sm:mb-3">El uso de esta plataforma es completamente anónimo y su único propósito es ofrecer orientación general sobre procesos de donación post mortem, con base en información pública y normativa mexicana vigente.</p>
                 <p class="mb-2 sm:mb-3">VIDA no sustituye asesoría médica, psicológica ni legal. Si requiere atención médica o desea formalizar su voluntad de donar, debe acudir a las instancias oficiales correspondientes (CENATRA, IMSS, ISSSTE, etc.).</p>
                 <p>Para cualquier comentario, puede escribir al desarrollador del proyecto a través del formulario de contacto disponible.</p>
-=======
-                <p class="mb-2 sm:mb-3">VIDA (Voz de Información y Donación Asistida) es una herramienta informativa que opera sin recopilar datos personales sensibles. No se almacenan nombres, ubicaciones, correos electrónicos ni respuestas específicas de los usuarios. Las conversaciones no son monitorizadas ni utilizadas con fines comerciales, publicitarios ni de perfilado.</p>
-                <p class="mb-2 sm:mb-3">El uso de esta plataforma es completamente anónimo y su único propósito es ofrecer orientación general sobre el sistema de donación de órganos y tejidos en España, con base en información pública y normativa vigente, incluida la Ley 30/1979 y los lineamientos de la Organización Nacional de Trasplantes (ONT).</p>
-                <p class="mb-2 sm:mb-3">VIDA no sustituye asesoramiento médico, psicológico ni legal. Si necesita atención médica o desea formalizar su voluntad de donar (a favor o en contra), debe acudir a las instancias oficiales correspondientes, como los registros autonómicos de Instrucciones Previas o el sitio web oficial de la ONT</p>
-                <p>Para cualquier comentario sobre esta herramienta, puede contactar con el equipo desarrollador a través del formulario de contacto disponible en esta página.</p>
->>>>>>> 1c36224 (Subir proyecto VIDA completo)
             </div>
         </div>
     </div>
