--- a/index.html
+++ b/index.html
@@ -964,11 +964,11 @@
                     </h2>
                     <div class="vida-main-subtitle text-xs sm:text-base md:text-lg lg:text-xl mt-2 sm:mt-5 fade-in-element" style="animation-delay: 0.6s;">
                         <p class="subtitle-line-1 mb-1 sm:mb-3 text-center lg:text-left text-xs sm:text-base">
-                            <span class="font-semibold">Tu aliado informativo</span> en momentos críticos
+                            <span class="font-semibold">Tu guía de confianza</span> en momentos delicados
                         </p>
                         <p class="subtitle-line-2 text-center lg:text-left leading-relaxed text-xs sm:text-base">
                             Estoy aquí para ayudarte a tomar decisiones 
-                            <span class="font-semibold">claras, humanas y fundamentadas</span>
+                            <span class="font-semibold">claras, humanas y bien informadas</span>
                         </p>
                     </div>
                 </div>
@@ -1012,11 +1012,11 @@
             <div class="container mx-auto max-w-xl lg:max-w-2xl px-4 sm:px-12 lg:px-16">
                 <div class="flex flex-col items-center justify-center py-1 sm:py-2">
                     <p class="text-[10px] sm:text-base md:text-xs text-slate-700 font-medium mb-0 leading-tight max-w-xs sm:max-w-md lg:max-w-lg text-center">
-                        VIDA es una herramienta informativa. No sustituye la atención médica.<br class="hidden sm:block">
-                        <span class="block sm:inline">© 2025 José Agustín Gutiérrez Iglesias | Iniciativa VIDA. Todos los derechos reservados.</span>
+                        VIDA es una herramienta informativa. No sustituye la atención médica ni legal.<br class="hidden sm:block">
+                        <span class="block sm:inline">© 2025 José Agustín Gutiérrez Iglesias | PROYECTO VIDA. Todos los derechos reservados.</span>
                     </p>
-                    <a href="https://www.gob.mx/cenatra" target="_blank" class="text-[10px] sm:text-xs text-[var(--vida-btn-feedback)] underline font-semibold hover:text-[var(--vida-text-dark)] transition-colors block mt-0 text-center">
-                        Ir a CENATRA
+                    <a href="https://www.ont.es/" target="_blank" class="text-[10px] sm:text-xs text-[var(--vida-btn-feedback)] underline font-semibold hover:text-[var(--vida-text-dark)] transition-colors block mt-0 text-center">
+                        Ir a la Organización Nacional de Trasplantes
                     </a>
                 </div>
             </div>
@@ -1036,17 +1036,17 @@
             </button>
             <h3 class="text-base sm:text-2xl font-bold text-[var(--vida-text-dark)] mb-2 sm:mb-4 pr-8">¿Qué hace VIDA?</h3>
             <div class="text-slate-700 text-justify space-y-2 sm:space-y-3 text-xs sm:text-base" style="text-align: justify;">
-                <p>VIDA es un asistente conversacional creado para brindar orientación empática, clara y confiable sobre la donación de órganos, tejidos y sangre en México.</p>
-                <p>Fue desarrollado como una herramienta informativa para acompañar a personas que tienen dudas, miedo o simplemente desean entender mejor cómo funciona la donación, ya sea como donadores voluntarios o como familiares que enfrentan una decisión en un momento difícil.</p>
-                <p>VIDA no sustituye atención médica ni asesoría profesional directa, pero está diseñada para ayudarte a:</p>
+                <p>VIDA es un asistente conversacional diseñado para ofrecer orientación empática, clara y fiable sobre la donación de órganos y tejidos en España.</p>
+                <p>Funciona como una herramienta informativa que acompaña a las personas que tienen dudas, inquietudes o simplemente desean comprender mejor cómo funciona el proceso de donación, ya sea como posibles donantes o como familiares que enfrentan una decisión en un momento sensible.</p>
+                <p>VIDA no sustituye la atención médica ni la orientación profesional directa, pero está pensada para ayudarte a:</p>
                 <ul class="list-disc pl-3 sm:pl-6 space-y-1 text-xs sm:text-base">
-                    <li>Entender qué órganos, tejidos y componentes sanguíneos se pueden donar.</li>
-                    <li>Saber quién puede ser donador y en qué momentos.</li>
-                    <li>Desmitificar ideas falsas sobre la donación.</li>
-                    <li>Reflexionar con libertad sobre el acto de donar.</li>
-                    <li>Obtener enlaces seguros y oficiales para registrarte como donador voluntario o encontrar centros de donación.</li>
+                    <li>Entender qué órganos y tejidos se pueden donar en vida o tras el fallecimiento.</li>
+                    <li>Saber cómo se gestiona la donación en sEspaña y cuál es el papel de la familia.</li>
+                    <li>Desmentir mitos comunes que pueden generar desconfianza o confusión.</li>
+                    <li>Reflexionar con libertad y sin presiones sobre la decisión de donar.</li>
+                    <li>Acceder a información oficial y actualizada, incluyendo enlaces seguros sobre voluntades anticipadas o cómo expresar tu deseo de donar.</li>
                 </ul>
-                <p>VIDA es una voz que informa sin juzgar, acompaña sin presionar, y cree que donar es un acto de amor y conciencia.</p>
+                <p>VIDA es una voz que informa sin juzgar, acompaña con respeto y cree que donar es uno de los mayores actos de generosidad y humanidad.</p>
             </div>
         </div>
     </div>
@@ -1058,10 +1058,10 @@
             </button>
             <h3 class="text-base sm:text-2xl font-bold text-[var(--vida-text-dark)] mb-2 sm:mb-4 pr-8">Aviso de Privacidad – VIDA</h3>
             <div class="text-slate-700 text-justify text-xs sm:text-base" style="text-align: justify;">
-                <p class="mb-2 sm:mb-3">VIDA (Voz de Información y Donación Asistida) es una herramienta informativa que opera sin recopilar datos personales sensibles. No se almacenan nombres, ubicaciones, correos electrónicos ni respuestas específicas de los usuarios. Las conversaciones no son monitoreadas ni utilizadas para fines comerciales o de perfilamiento.</p>
-                <p class="mb-2 sm:mb-3">El uso de esta plataforma es completamente anónimo y su único propósito es ofrecer orientación general sobre procesos de donación post mortem, con base en información pública y normativa mexicana vigente.</p>
-                <p class="mb-2 sm:mb-3">VIDA no sustituye asesoría médica, psicológica ni legal. Si requiere atención médica o desea formalizar su voluntad de donar, debe acudir a las instancias oficiales correspondientes (CENATRA, IMSS, ISSSTE, etc.).</p>
-                <p>Para cualquier comentario, puede escribir al desarrollador del proyecto a través del formulario de contacto disponible.</p>
+                <p class="mb-2 sm:mb-3">VIDA (Voz de Información y Donación Asistida) es una herramienta informativa que opera sin recopilar datos personales sensibles. No se almacenan nombres, ubicaciones, correos electrónicos ni respuestas específicas de los usuarios. Las conversaciones no son monitorizadas ni utilizadas con fines comerciales, publicitarios ni de perfilado.</p>
+                <p class="mb-2 sm:mb-3">El uso de esta plataforma es completamente anónimo y su único propósito es ofrecer orientación general sobre el sistema de donación de órganos y tejidos en España, con base en información pública y normativa vigente, incluida la Ley 30/1979 y los lineamientos de la Organización Nacional de Trasplantes (ONT).</p>
+                <p class="mb-2 sm:mb-3">VIDA no sustituye asesoramiento médico, psicológico ni legal. Si necesita atención médica o desea formalizar su voluntad de donar (a favor o en contra), debe acudir a las instancias oficiales correspondientes, como los registros autonómicos de Instrucciones Previas o el sitio web oficial de la ONT.</p>
+                <p>Para cualquier comentario sobre esta herramienta, puede contactar con el equipo desarrollador a través del formulario de contacto disponible en esta página.</p>
             </div>
         </div>
     </div>
