--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,7 @@
                 <p>VIDA no sustituye la atención médica ni la orientación profesional directa, pero está pensada para ayudarte a:</p>
                 <ul class="list-disc pl-3 sm:pl-6 space-y-1 text-xs sm:text-base">
                     <li>Entender qué órganos y tejidos se pueden donar en vida o tras el fallecimiento.</li>
-                    <li>Saber cómo se gestiona la donación en sEspaña y cuál es el papel de la familia.</li>
+                    <li>Saber cómo se gestiona la donación en España y cuál es el papel de la familia.</li>
                     <li>Desmentir mitos comunes que pueden generar desconfianza o confusión.</li>
                     <li>Reflexionar con libertad y sin presiones sobre la decisión de donar.</li>
                     <li>Acceder a información oficial y actualizada, incluyendo enlaces seguros sobre voluntades anticipadas o cómo expresar tu deseo de donar.</li>
