--- a/chat.html
+++ b/chat.html
@@ -555,12 +555,16 @@
                 botAvatarDiv.innerHTML = '<img src="robotcara.png" alt="Robot VIDA" class="w-10 h-10 object-contain p-1" onerror="this.onerror=null;this.src=\'https://placehold.co/40x40/0D47A1/FFFFFF?text=V\';" />';
                 messageWrapper.appendChild(botAvatarDiv);
                 textBubbleDiv.className += ` bot-bubble bg-[var(--bot-bubble-bg)] text-[var(--text-dark)] rounded-2xl rounded-bl-lg`;
-                // Botón de audio (text-to-speech)
+            }
+            textBubbleDiv.innerHTML += textContent;
+            messageWrapper.appendChild(textBubbleDiv);
+            // Botón de audio (text-to-speech) fuera de la burbuja
+            if (role !== 'user') {
                 const ttsBtn = document.createElement('button');
                 ttsBtn.type = 'button';
                 ttsBtn.title = 'Escuchar respuesta';
-                ttsBtn.className = 'absolute top-2 right-2 bg-slate-100 rounded-full p-2 hover:bg-blue-100 focus:outline-none focus:ring-2 focus:ring-blue-300 shadow';
-                ttsBtn.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-700" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19V6a1 1 0 011-1h4a1 1 0 011 1v13m-7 0h10" /></svg>';
+                ttsBtn.className = 'mt-1 ml-12 bg-slate-100 rounded-full p-2 hover:bg-blue-100 focus:outline-none focus:ring-2 focus:ring-blue-300 shadow flex items-center';
+                ttsBtn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path fill="#2563EB" d="M12 3a1 1 0 0 1 1 1v16a1 1 0 1 1-2 0V4a1 1 0 0 1 1-1Z"></path><path fill="#2563EB" d="M5.636 5.636a1 1 0 0 1 1.414 0l1.414 1.414a1 1 0 1 1-1.414 1.414L5.636 7.05a1 1 0 0 1 0-1.414Zm12.728 0a1 1 0 0 1 0 1.414l-1.414 1.414a1 1 0 1 1-1.414-1.414l1.414-1.414a1 1 0 0 1 1.414 0ZM3 12a1 1 0 0 1 1-1h2a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1Zm16 0a1 1 0 0 1 1-1h2a1 1 0 1 1 0 2h-2a1 1 0 0 1-1-1Zm-9.95 5.636a1 1 0 0 1 0-1.414l1.414-1.414a1 1 0 1 1 1.414 1.414l-1.414 1.414a1 1 0 0 1-1.414 0Zm7.778-1.414a1 1 0 0 1 1.414 1.414l-1.414 1.414a1 1 0 1 1-1.414-1.414l1.414-1.414Z"></path></g></svg>`;
                 ttsBtn.addEventListener('click', async (e) => {
                     e.preventDefault();
                     ttsBtn.disabled = true;
@@ -573,10 +577,8 @@
                     ttsBtn.disabled = false;
                     ttsBtn.classList.remove('opacity-60');
                 });
-                textBubbleDiv.appendChild(ttsBtn);
+                messageWrapper.appendChild(ttsBtn);
             }
-            textBubbleDiv.innerHTML += textContent;
-            messageWrapper.appendChild(textBubbleDiv);
             chatContainer.appendChild(messageWrapper);
             // Solo hacer scroll automático si es un mensaje del usuario O si el usuario estaba al final
             if (role === 'user' || isNearBottom) {
@@ -589,23 +591,32 @@
             }
         // --- OpenAI TTS (Text-to-Speech) ---
         async function playOpenAITTS(text) {
-            const apiKey = '';
-            // Si quieres seguridad, haz un endpoint backend que agregue la API key y reenvíe la petición
-            // Aquí se asume que tienes un endpoint /api/tts que hace el fetch seguro
-            const response = await fetch('/api/tts', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({
-                    input: text,
-                    model: 'gpt-4o-mini-tts',
-                    voice: 'fable'
-                })
-            });
-            if (!response.ok) throw new Error('TTS error');
-            const blob = await response.blob();
-            const url = URL.createObjectURL(blob);
-            const audio = new Audio(url);
-            audio.play();
+            try {
+                const response = await fetch('/api/tts', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({
+                        input: text,
+                        model: 'gpt-4o-mini-tts',
+                        voice: 'fable'
+                    })
+                });
+                if (!response.ok) throw new Error('TTS error');
+                const blob = await response.blob();
+                const url = URL.createObjectURL(blob);
+                const audio = new Audio();
+                audio.src = url;
+                audio.onended = () => {
+                    URL.revokeObjectURL(url);
+                };
+                audio.onerror = () => {
+                    URL.revokeObjectURL(url);
+                    alert('No se pudo reproducir el audio.');
+                };
+                await audio.play();
+            } catch (err) {
+                alert('No se pudo reproducir el audio.');
+            }
         }
         }
 
